feat: Adds react stack

--- a/index.html
+++ b/index.html
@@ -1,27 +1,13 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
   <head>
-    <meta charset="utf=8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css" />
-    <link href="https://www.dafontfree.net/embed/bmJhLW1pbHdhdWtlZS1idWNrcy0yMDE1LXJlZ3VsYXImZGF0YS8yMS9uLzEwMzA4Ni9OQkFfTWlsd2F1a2VlX0J1Y2tzXzIwMTUub3Rm" rel="stylesheet" type="text/css"/>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Todo List</title>
   </head>
   <body>
-    <div class="Cabecalho">
-      <a>Antler Moose</a>
-    </div>
-    <div class="redes">
-      <img class="Logo" src="./assets/WithoutBackground.png" alt=""> 
-      </div>
-
-    
-     
-    <form class="ipt" action="http://127.0.0.1:5500/TodoList.html" method="get">
-      <input class="nome" type="text" placeholder="E-mail" />
-      <input class="nome nome2" type="password" placeholder="Senha" />
-      <a class="ResetS" href="./ToDo.html">Esqueceu sua senha?</a>
-      <input class="nome nome3" type="submit">
-    </form>
-
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
   </body>
-  
+</html>
